plugins {
    id 'org.springframework.boot' version '2.7.5'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'java'
}

group = 'org.AirAPI'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    implementation 'org.projectlombok:lombok:1.18.22'

    implementation group: 'org.assertj', name: 'assertj-core', version: '3.6.1'
    implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
    implementation group: 'software.amazon.awssdk', name: 'textract', version: '2.11.0'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'org.apache.pdfbox:pdfbox:1.8.14'
    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.12'
    implementation 'org.apache.commons:commons-imaging:1.0-alpha3'
    testImplementation 'org.hamcrest:hamcrest-all:1.3'

    implementation 'com.google.firebase:firebase-admin:7.3.0'
    implementation 'mysql:mysql-connector-java'

    // FCM
    implementation 'com.google.firebase:firebase-admin:9.1.1'
    // SMTP GMAIL
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

}

tasks.named('test') {
    useJUnitPlatform()
}

